Got everything in place to submit to Runelite

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Step Counter
+author=cweeks12
+support=https://github.com/cweeks12/step-counter
+description=Counts the steps you take and if you meet your goal
+tags=step,count,walk,goal
+plugins=com.stepcounter.StepCounterPlugin
